[gd_scene load_steps=40 format=2]

[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 03.png" type="Texture" id=1]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 04.png" type="Texture" id=2]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 09.png" type="Texture" id=3]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 08.png" type="Texture" id=4]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 02.png" type="Texture" id=5]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 01.png" type="Texture" id=6]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 01.png" type="Texture" id=7]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 02.png" type="Texture" id=8]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 05.png" type="Texture" id=9]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 06.png" type="Texture" id=10]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 07.png" type="Texture" id=11]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 03.png" type="Texture" id=12]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 04.png" type="Texture" id=13]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 05.png" type="Texture" id=14]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/02-Run/Run 06.png" type="Texture" id=15]
[ext_resource path="res://Entity/Enemy.gd" type="Script" id=16]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 03.png" type="Texture" id=17]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 02.png" type="Texture" id=18]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 01.png" type="Texture" id=19]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 04.png" type="Texture" id=20]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 02.png" type="Texture" id=21]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 01.png" type="Texture" id=22]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 02.png" type="Texture" id=23]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 04.png" type="Texture" id=24]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 04.png" type="Texture" id=25]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 01.png" type="Texture" id=26]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 03.png" type="Texture" id=27]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 03.png" type="Texture" id=28]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 02.png" type="Texture" id=29]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 03.png" type="Texture" id=30]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 04.png" type="Texture" id=31]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 01.png" type="Texture" id=32]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 01.png" type="Texture" id=33]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 02.png" type="Texture" id=34]
[ext_resource path="res://Treasure Hunters/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 03.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": false,
"name": "ready",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 21 ), ExtResource( 28 ), ExtResource( 24 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 25 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ) ],
"loop": false,
"name": "hurt_dead",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.6412, 10.8469 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.7267, 12.661 )

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 35
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dead"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.11073, 1.29782 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="DetectLedge" type="RayCast2D" parent="."]
position = Vector2( -9.04776, 3.7755 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="AttackScan" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 30 )

[node name="DamageOnTouch" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageOnTouch"]
position = Vector2( 0.966705, 0.259613 )
shape = SubResource( 3 )

[node name="DeadFade" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DamageOnTouch" to="." method="_on_DamageOnTouch_body_entered"]
